@@ -1,0 +1,4 @@
+{
+   "count" : 0,
+   "href" : "/httpAuth/app/rest/builds?locator=id%3Anonexistent"
+}
